<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="language_picker_title">MoreLocale 2</string>
    <string name="select_your_language">Select your language</string>

    <string name="current_locale">Current Locale</string>
    <string name="custom_locale">Custom Locale</string>
    <string name="custom_locale_add">Add Locale</string>
    <string name="add">Add</string>

    <string name="delete">Delete</string>
    <string name="would_you_like_to_delete_this_custom_locale">Would you like to delete this locale?</string>
    <string name="preset_locale_cannot_be_deleted">Preset locale cannot be deleted.</string>

    <string name="locale_was_deleted">Locale was deleted.</string>
    <string name="locale_wasnt_deleted">Locale wasn\'t deleted.</string>

    <string name="custom_locale_title">Change Locale</string>

    <string name="label">Label</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="variant">Variant</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="ISO639">ISO639</string>
    <string name="ISO3166">ISO3166</string>
    
    <string name="url_iso_639">http://en.wikipedia.org/wiki/ISO_639</string>
    <string name="url_iso_3166">http://en.wikipedia.org/wiki/ISO_3166</string>

    <string name="about">About</string>

    <string name="version">version 2.2.2</string>

    <string name="developer">Copyright C-LIS Crazy Lab.</string>
    <string name="developer_url">http://ccl.c-lis.co.jp</string>

    <string name="developed_in_osaka_japan">Developed in Osaka, Japan.</string>

    <string name="cc_title">CC</string>
	<string name="creative_commons">This app is modifications based on work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>

	<string name="permission_change_locale_label">Change locale</string>
	<string name="permission_change_locale_description">This application will change system locale and country setting.</string>

    <string name="permission_denied">Permission Denied.</string>
    <string name="permission_denied_message">MoreLocale 2 is not granted a CHANGE_CONFIGURATION permission.\nIf you\'re able to use development tools, you can grant the permission manually by \'pm\' command.\n\nIf you have SuperUser privilege on your device.\nMoreLocale 2 could get the permission automatically.</string>
    <string name="show_how_to_use_pm_command">Show how to use \'pm\' command</string>
    <string name="use_superuser_privilege">Use SuperUser privilege</string>
        
    <string name="how_to_use_pm_command">How to use \'pm\' command</string>
    <string name="how_to_use_pm_command_message">1. Execute \'adb shell\' on your PC.\n2. type below command.\n&gt; pm grant jp.co.c_lis.ccl.morelocale android.permission.CHANGE_CONFIGURATION\n3. Retry changing locale.</string>

    <string name="could_not_get_su_privlege">MoreLocale 2 couldn\'t get SuperUser privilege...</string>
</resources>
