<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <ImageView
        android:id="@+id/about_iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_menu_3d_globe" />

    <TextView
        android:id="@+id/about_tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_iv_icon"
        android:text="@string/language_picker_title"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/about_tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/about_tv_app_name"
        android:layout_below="@id/about_tv_app_name"
        android:text="@string/version"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/about_tv_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_tv_version"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/about_iv_icon"
        android:text="@string/creative_commons"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/about_tv_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_tv_cc"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/about_iv_icon"
        android:text="@string/developer"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/about_tv_developer_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_tv_developer"
        android:layout_toRightOf="@id/about_iv_icon"
        android:autoLink="web"
        android:text="@string/developer_url" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/about_tv_developer_url"
        android:layout_marginTop="10dp"
        android:text="@string/developed_in_osaka_japan"
        android:textSize="12sp" />

</RelativeLayout>